--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="mhxxoo_site">Mhxxoo</string>
     <string name="semanhua_site">Semanhua</string>
     <string name="zhuotu_site">Zhuotu</string>
+    <string name="xixi_site">Xixi</string>
+    <string name="wuzhi_site">Wuzhi</string>
 </resources>
